# qry-ai

./: .gitignore  docker-compose.yml  init.sql  main.py  mock_ingest.py  pyproject.toml  run.sh  test.sh
